修正 main-header 以上範圍的樣式

--- a/index.html
+++ b/index.html
@@ -10,52 +10,69 @@
             type="image/x-icon"
         />
         <link rel="stylesheet" href="./style.css" />
+        <link
+            rel="stylesheet"
+            href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
+            integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A=="
+            crossorigin="anonymous"
+            referrerpolicy="no-referrer"
+        />
     </head>
     <body>
         <nav>
-            <a
-                href="https://biz-school.bnextmedia.com.tw/business-manager?_gl=1*1fucczs*_ga*MTAwNjU1ODY3LjE3MTI5ODQ2NjI.*_ga_383SSRZR6Z*MTcxMjk4NDY2MS4xLjEuMTcxMjk4NTgzNy42MC4wLjA.*_ga_G9MHY2DC1W*MTcxMjk4NDY2MS4xLjEuMTcxMjk4NTgzNy4wLjAuMA.."
-                target="_blank"
-                rel="noreferrer noopener"
-                ><img
-                    src="/assets/mtschool-logo-21.png"
-                    alt="新商業學校 經理人 首頁連結"
-            /></a>
-            <ul class="nav-box">
-                <li>
-                    <a href="#agenda"> 精彩課綱</a>
-                </li>
-                <li>
-                    <a href="#course-info"> 課程資訊</a>
-                </li>
-                <li>
-                    <a href="#faq"> 常見問題</a>
-                </li>
-                <li>
-                    <a
-                        href="https://school.bnextmedia.com.tw/groupticket/?utm_source=web_mt&utm_medium=rwd&utm_campaign=2024q2lead"
-                        target="_blank"
-                        rel="noreferrer noopener"
-                    >
-                        課程團票
-                    </a>
-                </li>
-                <li>
-                    <a
-                        href="https://eventgo.bnextmedia.com.tw/event/view/e11241u6576af709b72d/"
-                        target="_blank"
-                        rel="noreferrer noopener"
-                    >
-                        立即報名
-                    </a>
-                </li>
-                <li><img src="/assets/fb.png" alt="" /></li>
-            </ul>
+            <div class="container">
+                <a
+                    href="https://biz-school.bnextmedia.com.tw/business-manager?_gl=1*1fucczs*_ga*MTAwNjU1ODY3LjE3MTI5ODQ2NjI.*_ga_383SSRZR6Z*MTcxMjk4NDY2MS4xLjEuMTcxMjk4NTgzNy42MC4wLjA.*_ga_G9MHY2DC1W*MTcxMjk4NDY2MS4xLjEuMTcxMjk4NTgzNy4wLjAuMA.."
+                    target="_blank"
+                    rel="noreferrer noopener"
+                    ><img
+                        src="/assets/mtschool-logo-21.png"
+                        alt="新商業學校 經理人 首頁連結"
+                /></a>
+                <ul class="nav-box">
+                    <li>
+                        <a href="#agenda"> 精彩課綱</a>
+                    </li>
+                    <li>
+                        <a href="#course-info"> 課程資訊</a>
+                    </li>
+                    <li>
+                        <a href="#faq"> 常見問題</a>
+                    </li>
+                    <li>
+                        <a
+                            href="https://school.bnextmedia.com.tw/groupticket/?utm_source=web_mt&utm_medium=rwd&utm_campaign=2024q2lead"
+                            target="_blank"
+                            rel="noreferrer noopener"
+                        >
+                            課程團票
+                        </a>
+                    </li>
+                    <li>
+                        <a
+                            href="https://eventgo.bnextmedia.com.tw/event/view/e11241u6576af709b72d/"
+                            target="_blank"
+                            rel="noreferrer noopener"
+                        >
+                            立即報名
+                        </a>
+                    </li>
+                    <li>
+                        <a
+                            href="https://www.facebook.com/sharer/sharer.php?u=https://edm.managertoday.com.tw/lead/"
+                            target="_blank"
+                            rel="noreferrer noopener"
+                        >
+                            <img src="./assets/fb.png" alt="臉書" />
+                        </a>
+                    </li>
+                </ul>
+            </div>
         </nav>
         <div class="to-the-top">
-            <div class="arrow"></div>
+            <i class="fas fa-angle-up fa-xl"></i>
         </div>
-        <header class="top-header">
+        <header class="main-header">
             <div class="container">
                 <a
                     href="https://eventgo.bnextmedia.com.tw/event/view/e11241u6576af709b72d/"
@@ -76,52 +93,54 @@
         </header>
 
         <section class="recomm">
-            <div>
-                <h2>
-                    管理學大師彼得‧杜拉克曾說：「組織的目的在於，使平凡人做不平凡事。」
-                </h2>
-                <p>
-                    一個卓越的領導者靠的絕不是頭銜，而是懂得用對方法，持續累積經驗，和團隊一起變強！
-                    <br />
-                    帶人的技術課程連續 7 年好評開課，系統化拆解 1 對 1
-                    指導重點，有效帶出得力部屬！
-                </p>
-            </div>
-            <div class="feedback">
-                <h2>超過千人學員好評推薦！</h2>
-                <div class="recomm-carousel-cards">
+            <div class="container">
+                <div>
+                    <h2>
+                        管理學大師彼得‧杜拉克曾說：「組織的目的在於，使平凡人做不平凡事。」
+                    </h2>
                     <p>
-                        新興員工觀念蠻前衛的，沒有足夠的經驗真的應付不來。<br />
-                        很高興在課程中，學習到很好的運用手腕，又不傷彼此自尊心，<br />
-                        又能達成工作目標，真是十全十美的作法。謝謝老師與承辦單位，謝謝。
+                        一個卓越的領導者靠的絕不是頭銜，而是懂得用對方法，持續累積經驗，和團隊一起變強！
+                        <br />
+                        帶人的技術課程連續 7 年好評開課，系統化拆解 1 對 1
+                        指導重點，有效帶出得力部屬！
                     </p>
-                    <span>關鍵指導力/資通訊服務業/中高階主管</span>
                 </div>
-                <div class="recomm-carousel-inticator-wrap">
-                    <div class="recomm-carousel-inticators"></div>
-                    <div class="recomm-carousel-inticators"></div>
-                    <div class="recomm-carousel-inticators"></div>
-                    <div class="recomm-carousel-inticators"></div>
-                    <div class="recomm-carousel-inticators"></div>
-                    <div class="recomm-carousel-inticators"></div>
-                    <div class="recomm-carousel-inticators"></div>
-                    <div class="recomm-carousel-inticators"></div>
-                    <div class="recomm-carousel-inticators"></div>
+                <div class="feedback">
+                    <h2>超過千人學員好評推薦！</h2>
+                    <div class="recomm-carousel-cards">
+                        <p>
+                            新興員工觀念蠻前衛的，沒有足夠的經驗真的應付不來。<br />
+                            很高興在課程中，學習到很好的運用手腕，又不傷彼此自尊心，<br />
+                            又能達成工作目標，真是十全十美的作法。謝謝老師與承辦單位，謝謝。
+                        </p>
+                        <span>關鍵指導力/資通訊服務業/中高階主管</span>
+                    </div>
+                    <div class="recomm-carousel-inticator-wrap">
+                        <div class="recomm-carousel-inticators"></div>
+                        <div class="recomm-carousel-inticators"></div>
+                        <div class="recomm-carousel-inticators"></div>
+                        <div class="recomm-carousel-inticators"></div>
+                        <div class="recomm-carousel-inticators"></div>
+                        <div class="recomm-carousel-inticators"></div>
+                        <div class="recomm-carousel-inticators"></div>
+                        <div class="recomm-carousel-inticators"></div>
+                        <div class="recomm-carousel-inticators"></div>
+                    </div>
                 </div>
-            </div>
-            <div>
-                <h2>這堂課<br />適合誰？</h2>
-                <div class="recomm-cards">
-                    <h3>部門、業務經理人</h3>
-                    <p>運用精準話術，<br />在不同情境發揮影響力</p>
-                </div>
-                <div class="recomm-cards">
-                    <h3>新任初中階主管</h3>
-                    <p>掌握帶人技巧，<br />建立與部屬的信任關係</p>
-                </div>
-                <div class="recomm-cards">
-                    <h3>企業經營者</h3>
-                    <p>透過有效的溝通與步驟，<br />讓團隊主動成長</p>
+                <div>
+                    <h2>這堂課<br />適合誰？</h2>
+                    <div class="recomm-cards">
+                        <h3>部門、業務經理人</h3>
+                        <p>運用精準話術，<br />在不同情境發揮影響力</p>
+                    </div>
+                    <div class="recomm-cards">
+                        <h3>新任初中階主管</h3>
+                        <p>掌握帶人技巧，<br />建立與部屬的信任關係</p>
+                    </div>
+                    <div class="recomm-cards">
+                        <h3>企業經營者</h3>
+                        <p>透過有效的溝通與步驟，<br />讓團隊主動成長</p>
+                    </div>
                 </div>
             </div>
         </section>
