section.recomm 的樣式修正

--- a/index.html
+++ b/index.html
@@ -93,8 +93,8 @@
         </header>
 
         <section class="recomm">
-            <div class="container">
-                <div>
+            <div>
+                <div class="container">
                     <h2>
                         管理學大師彼得‧杜拉克曾說：「組織的目的在於，使平凡人做不平凡事。」
                     </h2>
@@ -105,30 +105,38 @@
                         指導重點，有效帶出得力部屬！
                     </p>
                 </div>
-                <div class="feedback">
+            </div>
+            <div class="feedback">
+                <div class="container">
                     <h2>超過千人學員好評推薦！</h2>
-                    <div class="recomm-carousel-cards">
-                        <p>
-                            新興員工觀念蠻前衛的，沒有足夠的經驗真的應付不來。<br />
-                            很高興在課程中，學習到很好的運用手腕，又不傷彼此自尊心，<br />
-                            又能達成工作目標，真是十全十美的作法。謝謝老師與承辦單位，謝謝。
-                        </p>
-                        <span>關鍵指導力/資通訊服務業/中高階主管</span>
-                    </div>
-                    <div class="recomm-carousel-inticator-wrap">
-                        <div class="recomm-carousel-inticators"></div>
-                        <div class="recomm-carousel-inticators"></div>
-                        <div class="recomm-carousel-inticators"></div>
-                        <div class="recomm-carousel-inticators"></div>
-                        <div class="recomm-carousel-inticators"></div>
-                        <div class="recomm-carousel-inticators"></div>
-                        <div class="recomm-carousel-inticators"></div>
-                        <div class="recomm-carousel-inticators"></div>
-                        <div class="recomm-carousel-inticators"></div>
+                    <div class="recomm-carousel">
+                        <div class="recomm-carousel-cards">
+                            <p>
+                                新興員工觀念蠻前衛的，沒有足夠的經驗真的應付不來。<br />
+                                很高興在課程中，學習到很好的運用手腕，又不傷彼此自尊心，<br />
+                                又能達成工作目標，真是十全十美的作法。謝謝老師與承辦單位，謝謝。
+                            </p>
+                            <span>關鍵指導力/資通訊服務業/中高階主管</span>
+                        </div>
+                        <div class="recomm-carousel-inticators-wrap">
+                            <div class="recomm-carousel-inticators"></div>
+                            <div class="recomm-carousel-inticators"></div>
+                            <div class="recomm-carousel-inticators"></div>
+                            <div class="recomm-carousel-inticators"></div>
+                            <div class="recomm-carousel-inticators"></div>
+                            <div class="recomm-carousel-inticators"></div>
+                            <div class="recomm-carousel-inticators"></div>
+                            <div class="recomm-carousel-inticators"></div>
+                            <div class="recomm-carousel-inticators"></div>
+                        </div>
+                        <a class="recomm-carousel-arrows recomm-carousel-prev" role="button"><i class="fas fa-angle-left"></i></a>
+                        <a class="recomm-carousel-arrows recomm-carousel-next" role="button"><i class="fas fa-angle-right"></i></a>
                     </div>
                 </div>
-                <div>
-                    <h2>這堂課<br />適合誰？</h2>
+            </div>
+            <div>
+                <div class="container">
+                    <h2>這堂課適合誰？</h2>
                     <div class="recomm-cards">
                         <h3>部門、業務經理人</h3>
                         <p>運用精準話術，<br />在不同情境發揮影響力</p>
