全數樣式修正完成

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <title>2024 帶人的技術：5/31 教練領導學 x 6/28 關鍵指導力</title>
         <link
             rel="icon"
-            href="/assets/favicon/favicon-32x32.png"
+            href="./assets/favicon/favicon-32x32.png"
             type="image/x-icon"
         />
         <link rel="stylesheet" href="./style.css" />
@@ -26,7 +26,7 @@
                     target="_blank"
                     rel="noreferrer noopener"
                     ><img
-                        src="/assets/mtschool-logo-21.png"
+                        src="./assets/mtschool-logo-21.png"
                         alt="新商業學校 經理人 首頁連結"
                 /></a>
                 <ul class="nav-box">
@@ -80,19 +80,19 @@
                     rel="noreferrer noopener"
                 >
                     <img
-                        src="/assets/web_header.png"
+                        src="./assets/web_header.png"
                         alt="限時優惠：課程八折起，報名加贈經理人月刊6期，點擊領取優惠"
                     />
                 </a>
 
                 <img
-                    src="/assets/top-landscape.svg"
+                    src="./assets/top-landscape.svg"
                     alt="帶人的技術：(1)教練領導學，(2)關鍵指導力。企業指定→主管養成計畫"
                 />
             </div>
         </header>
 
-        <section class="recomm">
+        <section class="section-margin recomm">
             <div>
                 <div class="container">
                     <h2>
@@ -129,8 +129,16 @@
                             <div class="recomm-carousel-inticators"></div>
                             <div class="recomm-carousel-inticators"></div>
                         </div>
-                        <a class="recomm-carousel-arrows recomm-carousel-prev" role="button"><i class="fas fa-angle-left"></i></a>
-                        <a class="recomm-carousel-arrows recomm-carousel-next" role="button"><i class="fas fa-angle-right"></i></a>
+                        <a
+                            class="recomm-carousel-arrows recomm-carousel-prev"
+                            role="button"
+                            ><i class="fas fa-angle-left"></i
+                        ></a>
+                        <a
+                            class="recomm-carousel-arrows recomm-carousel-next"
+                            role="button"
+                            ><i class="fas fa-angle-right"></i
+                        ></a>
                     </div>
                 </div>
             </div>
@@ -153,7 +161,7 @@
             </div>
         </section>
 
-        <section class="agenda" id="agenda">
+        <section class="section-margin agenda" id="agenda">
             <div class="container">
                 <header class="section-header">
                     <h2>精彩課綱</h2>
@@ -183,7 +191,7 @@
                     <div class="agd-content">
                         <div class="agd-content-img">
                             <img
-                                src="/assets/agenda-four.svg"
+                                src="./assets/agenda-four.svg"
                                 alt="教練式領導四流程"
                             />
                         </div>
@@ -216,32 +224,32 @@
                 </article>
             </div>
         </section>
-        <section class="key-caps">
+        <section class="section-margin key-caps">
             <h2>頂尖領導者必備的4大關鍵能力</h2>
             <div class="key-caps-box">
                 <div class="key-caps-cards">
-                    <img src="/assets/key-caps-1.svg" alt="領導情境解析" />
+                    <img src="./assets/key-caps-1.svg" alt="領導情境解析" />
                     <h3>領導情境解析</h3>
                     <p>拆解常見團隊難題</p>
                 </div>
                 <div class="key-caps-cards">
-                    <img src="/assets/key-caps-2.svg" alt="精準溝通策略" />
+                    <img src="./assets/key-caps-2.svg" alt="精準溝通策略" />
                     <h3>精準溝通策略</h3>
                     <p>掌握傾聽與提問技巧</p>
                 </div>
                 <div class="key-caps-cards">
-                    <img src="/assets/key-caps-3.svg" alt="對話實戰演練" />
+                    <img src="./assets/key-caps-3.svg" alt="對話實戰演練" />
                     <h3>對話實戰演練</h3>
                     <p>模擬腳本+情境對話</p>
                 </div>
                 <div class="key-caps-cards">
-                    <img src="/assets/key-caps-4.svg" alt=" 影響力主管 " />
+                    <img src="./assets/key-caps-4.svg" alt=" 影響力主管 " />
                     <h3>影響力主管</h3>
                     <p>帶領團隊持續成長、創造績效</p>
                 </div>
             </div>
         </section>
-        <section class="about-course">
+        <section class="section-margin about-course">
             <div class="container">
                 <article>
                     <h2>課程重點搶先看</h2>
@@ -260,13 +268,13 @@
                         <h3><em>- Speaker -</em></h3>
                     </header>
                     <img
-                        src="/assets/speaker.png"
+                        src="./assets/speaker.png"
                         alt="講師陳煥庭的介紹：起初國際台灣分公司執行長"
                     />
                 </article>
             </div>
         </section>
-        <section class="course-info" id="course-info">
+        <section class="section-margin course-info" id="course-info">
             <div class="container">
                 <header class="section-header">
                     <h2>課程資訊</h2>
@@ -359,7 +367,7 @@
                 </div>
             </div>
         </section>
-        <section class="annual">
+        <section class="section-margin annual">
             <div class="container">
                 <h2>帶人的技術 2024 年度課表全展開</h2>
                 <p>
@@ -433,7 +441,7 @@
                 </table>
             </div>
         </section>
-        <section class="extra-course">
+        <section class="section-margin extra-course">
             <header>
                 <h2>成為一流主管・必修課程</h2>
                 <p>新商業學校管理訓練課程 ⮕ 從個人到團隊全面升級領導力</p>
@@ -446,7 +454,7 @@
                             <div class="lightening-line"></div>
                         </figcaption>
                         <img
-                            src="/assets/extra-cour-p01.jpg"
+                            src="./assets/extra-cour-p01.jpg"
                             alt="1 對 1 引導部屬"
                         />
                     </figure>
@@ -472,7 +480,7 @@
                             <div class="lightening-line"></div>
                         </figcaption>
                         <img
-                            src="/assets/extra-cour-p02.jpg"
+                            src="./assets/extra-cour-p02.jpg"
                             alt="指導部屬與能力升級"
                         />
                     </figure>
@@ -498,7 +506,7 @@
                             <div class="lightening-line"></div>
                         </figcaption>
                         <img
-                            src="/assets/extra-cour-p03.jpg"
+                            src="./assets/extra-cour-p03.jpg"
                             alt="團隊領導策略"
                         />
                     </figure>
@@ -524,7 +532,7 @@
                             <div class="lightening-line"></div>
                         </figcaption>
                         <img
-                            src="/assets/extra-cour-p04.jpg"
+                            src="./assets/extra-cour-p04.jpg"
                             alt="聰明應對常見管理難題"
                         />
                     </figure>
@@ -546,7 +554,7 @@
             </div>
         </section>
 
-        <section class="read-more">
+        <section class="section-margin read-more">
             <div class="container">
                 <header class="section-header">
                     <h2>延伸閱讀</h2>
@@ -664,10 +672,20 @@
                         </li>
                     </ul>
                 </article>
+                <a
+                    href="https://school.bnextmedia.com.tw/groupticket/"
+                    target="_blank"
+                    rel="noreferrer noopener"
+                >
+                    <img
+                        src="./assets/read-more-banner.gif"
+                        alt="課程團票預購 大宗購買"
+                    />
+                </a>
             </div>
         </section>
 
-        <section class="faq" id="faq">
+        <section class="section-margin faq" id="faq">
             <div class="container">
                 <header class="section-header">
                     <h2>常見問題</h2>
